--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,44 @@
-anytree
+aiohttp
+aiofiles
+aioshutil
+anytree==2.8.0
+apscheduler
 aria2p
 asyncio
 beautifulsoup4
-bencoding
-cfscrape
+cinemagoer
+cloudscraper
+cryptography
+dnspython
 feedparser
 flask
+gevent
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
 gunicorn
-lk21
+git+https://github.com/zevtyardt/lk21.git
+httpx
+langcodes[data]
 lxml
+motor
+mutagen
+markdown
+natsort
 pillow
 psutil
-psycopg2-binary
 pybase64
-pycryptodomex
+pycountry
+pymongo
 pyrogram
 python-dotenv
 python-magic
-python-telegram-bot
 qbittorrent-api
 requests
-SecretStorage
+speedtest-cli
+telegraph
 tenacity
-tgCrypto
+tgcrypto
+uvloop
 xattr
 yt-dlp
-telegraph
